force-app/main/default/objects/Lead_Activity__c/Lead_Activity__c.object-meta.xml
<CustomObject>
    <label>Lead Activity</label>
    <pluralLabel>Lead Activities</pluralLabel>
    <nameField>
        <label>Activity Name</label>
        <type>AutoNumber</type>
        <displayFormat>ACT-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Records all FLS interactions against a Lead — phone calls and face-to-face visits.</description>
</CustomObject>