force-app/main/default/objects/Lead_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Phone Call</fullName><default>false</default><label>Phone Call</label></value>
            <value><fullName>Face-to-Face Visit</fullName><default>false</default><label>Face-to-Face Visit</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>