force-app/main/default/objects/Lead_Activity__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>MasterDetail</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Activities</relationshipLabel>
    <relationshipName>Lead_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
</CustomField>