force-app/main/default/objects/Lead_Activity__c/fields/Logged_By__c.field-meta.xml
<CustomField>
    <fullName>Logged_By__c</fullName>
    <label>Logged By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Logged Activities</relationshipLabel>
    <relationshipName>Logged_Activities</relationshipName>
    <description>Auto-populated with the current user on creation.</description>
</CustomField>