force-app/main/default/objects/Lead_Activity__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Interested</fullName><default>false</default><label>Interested</label></value>
            <value><fullName>Not Interested</fullName><default>false</default><label>Not Interested</label></value>
            <value><fullName>Follow Up Required</fullName><default>false</default><label>Follow Up Required</label></value>
            <value><fullName>No Answer</fullName><default>false</default><label>No Answer</label></value>
            <value><fullName>Left Voicemail</fullName><default>false</default><label>Left Voicemail</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>